# substreams-evm-tokens

./: Cargo.toml  Makefile  README.md  ens_events.json  schema.sql  substreams.yaml
clickhouse/: Cargo.toml  schema.sql  schema.views.balances.sql  schema.views.ohlc-prices.sql  schema.views.transfers.sql  substreams.yaml
clickhouse-nfts/: Makefile  schema.1.events.erc721_metadata.sql  schema.2.view.erc721_cryptopunks.sql  schema.events.seaport.sql  schema.events.sql  schema.offchain.todo  schema.sql  schema.views.seaport-orders-ohlc.sql  schema.views.seaport-orders.sql  schema.views.seaport.sql  schema.views.todo  substreams.yaml
clickhouse-tokens/: Makefile  schema.0.functions.helpers.sql  schema.0.template.sql  schema.1.events.erc20-supply.sql  schema.1.events.erc20-transfers.sql  schema.1.events.erc20_balance_changes.sql  schema.1.events.erc20_balances.sql  schema.1.events.erc20_metadata.sql  schema.1.events.erc20_transfer.sql  schema.1.events.erc20_transfers.sql  schema.1.events.native-balances.sql  schema.1.events.native_balances.sql  schema.1.events.native_transfer.sql  schema.1.events.native_transfers.sql  schema.1.table.balances.sql  schema.1.table.erc20_approval.sql  schema.1.table.erc20_supply.sql  schema.1.table.metadata.sql  schema.1.table.supply.sql  schema.1.table.transfers.sql  schema.2.mv.balances.sql  schema.2.mv.metadata.sql  schema.2.mv.transfers.sql  schema.2.view.erc20-metadata.sql  schema.3.mv.historical-balances.sql  schema.3.view.balances.sql  schema.3.view.metadata.sql  schema.3.view.transfers.TODO  schema.3.views.balances.TODO  schema.4.mv.metadata.sql  schema.4.view.historical-balances.sql  schema.sql  substreams.yaml
clickhouse-uniswaps/: Makefile  schema.1.dictionary.erc20-contracts.sql  schema.1.events.uniswap-v2.sql  schema.1.events.uniswap-v3.sql  schema.1.events.uniswap-v4.sql  schema.2.view.swaps.sql  schema.2.views.pools.sql  schema.2.views.swaps.sql  schema.3.view.ohlc_prices.TODO  schema.3.view.ohlc_prices.sql  schema.3.view.ohlc_prices_by_contract.sql  schema.3.views.ohlc-prices.sql  schema.3.views.ohlc_prices.sql  schema.4.view.ohlc_prices_by_contract.REFERENCE  schema.4.view.pool_activity_summary.TODO  schema.4.view.pool_activity_summary.sql  schema.4.views.ohlc_prices_by_day.sql  schema.sql  (+5 more)
clickhouse/src/: db_out.rs
native-transfers/: Cargo.toml  substreams.yaml
native-transfers/src/: lib.rs
(+121 files in other folders)
