[workspace]
members = [
  "erc20-balances",
  "erc20-balances-rpc",
  "erc20-contracts",
  "erc20-contracts-rpc",
  "native-balances",
  "native-contracts",
  "uniswap-v2",
  "uniswap-v3",
  "proto",
  "common",
  "clickhouse",
  "ens"
]
resolver = "2"

[workspace.package]
description = "EVM Tokens"
edition = "2021"
version = "0.0.0"

[workspace.dependencies]
substreams = "0.6.1"
substreams-abis = "0.2.2"
substreams-ethereum = "0.10.4"
prost = "=0.13.5"
prost-types = "=0.13.5"
prost-build = "=0.13.5"

[patch.crates-io]
prost = { git = "https://github.com/tokio-rs/prost", tag = "v0.13.5" }
prost-types = { git = "https://github.com/tokio-rs/prost", tag = "v0.13.5" }
prost-build = { git = "https://github.com/tokio-rs/prost", tag = "v0.13.5" }
