[package]
name = "native"
description = "EVM Native Transfers"
edition = { workspace = true }
version = { workspace = true }
authors = ["Denis <denis@pinax.network>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
substreams = { workspace = true }
substreams-ethereum = { workspace = true }
common = { path = "../common" }
proto = { path = "../proto" }
